<resources>
    <string name="app_name">Password Generator</string>
    <string name="include_uppercase_letters">Include uppercase letters</string>
    <string name="include_numbers">Include numbers</string>
    <string name="include_symbols">Include symbols</string>
    <string name="regenerate">Regenerate</string>
    <string name="include_lowercase_letters">Include lowercase letters</string>
    <string name="password_length">Password Length</string>
    <string name="password_generator">Password Generator</string>
    <string name="character_length">Character Length</string>
    <string name="options">OPTIONS</string>
    <string name="copy_password">Copy password</string>
    <string name="password_result">Password result</string>
    <string name="symbols">([!@#$%^&amp;*(){}=&gt;&lt;/,.])</string>
    <string name="numbers">(0-9)</string>
    <string name="lowercase">(a-z)</string>
    <string name="uppercase">(A-Z)</string>
    <string name="copy">Copy</string>
</resources>

    <!--

    [!@#$%^&*(){}[]=<\>/,.]

    -->